--- a/config.toml
+++ b/config.toml
@@ -54,9 +54,9 @@ googleAnalytics = ""
     src       = "/img/main/logo.jpg"
     # modify your picture in the shape of a circle or
     # future imperfect's hexagonal shape
-    circle    = false
+    circle    = true
     imperfect = true
-    width     = ""
+    width     = "75px"
     alt       = "Hugo Future Imperfect"
 
 # Adjust the amount of recent posts on the sidebar.
