--- a/config.toml
+++ b/config.toml
@@ -16,7 +16,7 @@ googleAnalytics = ""
     socialAppearAtTop    = true
     socialAppearAtBottom = true
     # set this to the section name if section is not post
-    viewMorePostLink     = "/posts/"
+    viewMorePostLink     = "/post/"
 
 # Optional Params
     categoriesByCount    = true
@@ -68,7 +68,7 @@ googleAnalytics = ""
 # You can use identifier to prepend a font awesome icon to your text
 [[menu.main]]
     name = "Posts"
-    url = "/posts"
+    url = "/post"
     identifier = "fa fa-newspaper-o"
     weight = 1
 
