add about me, edit post

--- a/config.toml
+++ b/config.toml
@@ -11,7 +11,7 @@ googleAnalytics = ""
     # Sets the meta tag description, usually reserved for the main page
     description          = "HTML5 UP theme, Future Imperfect with some extra goodies, ported by Julio Pescador. Powered by Hugo"
     # This will appear on the top left of the navigation bar
-    navbarTitle          = "Michael Groesbeck"
+    navbarTitle          = "HOME"
     # Social media buttons that appear on the sidebar
     socialAppearAtTop    = true
     socialAppearAtBottom = true
@@ -42,15 +42,17 @@ googleAnalytics = ""
 # This is optional, but it's suggested to use
 [params.intro]
 
-    paragraph = "A website to display my projects (update)"
+    header = "Michael Groesbeck"
 
-    about     = "Ito ay aking bagong website. Tingnan mo, astig 'no?"
+    paragraph = "A website to display my projects"
+
+    about     = "My name is Michael Groesbeck, and this is my website where I will post the various data projects I work on."
 
 # This will also appear on the sidebar.
 # A width of less than 100px is recommended
 # This is optional
 [params.intro.pic]
-    src       = "/img/main/logo.jpg"
+    src       = "/img/main/me.jpg"
     # modify your picture in the shape of a circle or
     # future imperfect's hexagonal shape
     circle    = true
@@ -68,7 +70,6 @@ googleAnalytics = ""
 [[menu.main]]
     name = "Posts"
     url = "/post"
-    identifier = "fa fa-newspaper-o"
     weight = 1
 
 [[menu.main]]
