--- a/config.toml
+++ b/config.toml
@@ -52,12 +52,12 @@ googleAnalytics = ""
 # A width of less than 100px is recommended
 # This is optional
 [params.intro.pic]
-    src       = "/img/main/me.jpg"
+    src       = "/img/main/head_shot.jpg"
     # modify your picture in the shape of a circle or
     # future imperfect's hexagonal shape
     circle    = true
     imperfect = true
-    width     = "100px"
+    width     = "120px"
     alt       = "Hugo Future Imperfect"
 
 # Adjust the amount of recent posts on the sidebar.
