--- a/config.toml
+++ b/config.toml
@@ -52,7 +52,7 @@ googleAnalytics = ""
 # A width of less than 100px is recommended
 # This is optional
 [params.intro.pic]
-    src       = "/img/main/head_shot.jpg"
+    src       = "/img/main/main.jpg"
     # modify your picture in the shape of a circle or
     # future imperfect's hexagonal shape
     circle    = true
