change front page

--- a/config.toml
+++ b/config.toml
@@ -44,7 +44,7 @@ googleAnalytics = "UA-99583063-1"
 
     header = "Michael Groesbeck"
 
-    paragraph = "A website for my projects"
+    paragraph = "Welcome"
 
     about     = "My name is Michael Groesbeck, I'm a statistician / data analyst who works primarly in R."
 
