--- a/config.toml
+++ b/config.toml
@@ -81,6 +81,11 @@ googleAnalytics = "UA-99583063-1"
     name = "About"
     url = "/about"
     weight = 3
+    
+[[menu.main]]
+    name = "Resume"
+    url = "/resume"
+    weight = 4
 
 # Insert your username and the icon will apear on the page as long as
 # socialAppearAtTop or socialAppearAtBottom is set to true in the params area
